@@ -114,7 +114,7 @@ public class RemoteMaster extends JP1Frame implements ActionListener, PropertyCh
 
   /** Description of the Field. */
   public final static String version = "v2.03";
-  public final static int buildVer = 5;
+  public final static int buildVer = 6;
   
   public static int getBuild()
   {
